--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@ node_modules
 
 # Ignore SASS config files
 .sass-cache
+.idea
+LINQ_Extensions_Examples/obj
+Interface_Examples/bin
+Interface_Examples/obj
